--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-top: 100px;
 }
@@ -19,6 +19,7 @@ section {
 .half-width {
     width: 50%;
     padding-left: 2%;
+ 
 }
 
 .half-width img {
@@ -42,4 +43,29 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+background-image: url(images/exp-bg.png);
+background-repeat: no-repeat;
+background-position: left;
+   
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    padding-left: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+     
+
+
+}
+#full-stack-dev{
+    border-left: 7px solid orange;
+}
+#baby-web-dev{
+    border-left: 7px solid blue;
+}
+footer{
+    text-align: center;
 }
