--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
 
 h1 {
     font-size: 50px;
@@ -18,7 +22,9 @@ h1 {
 
 .half-width {
     width: 50%;
+    float: left;
     padding-left: 2%;
+    margin-left: 2%;
  
 }
 
